--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #d2b48c;
+	background-color: #42aaf4;
 	margin-left: 20%;
 	margin-right: 20%;
 	padding: 10px 10px 10px 10px;
